Ensure user knows messages over 1000 are too long

--- a/frontend/src/components/Chat/Chat.scss
+++ b/frontend/src/components/Chat/Chat.scss
@@ -13,6 +13,10 @@
   padding: 0.5em;
   padding-top: 6vh;
 
+  .warning-text {
+    color: red;
+  }
+
   input {
     outline: none;
   }
